--- a/apps/presence/.gitignore
+++ b/apps/presence/.gitignore
@@ -19,8 +19,6 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-# others
-*.beam
-/config/*.secret.exs
-.elixir_ls/
-.vscode/
+# Ignore package tarball (built via "mix hex.build").
+presence-*.tar
+
